# vantaq

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
LICENSES/: LicenseRef-Commercial.txt
cmake/: Dependencies.cmake
config/device-1/: vantaqd.json  vantaqd.yaml
docker/device/: Dockerfile
docker/test-runner/: Dockerfile  run-health-check.sh
docs/: RUNBOOK.md
include/: vantaq_types.h
include/application/: app.h
include/application/attestation_challenge/: create_challenge.h
include/application/evidence/: create_evidence.h  get_evidence_by_id.h  get_latest_evidence.h  latest_evidence_store.h
include/application/security/: get_verifier_metadata.h  verifier_context.h  verifier_lookup.h
include/domain/: version.h
include/domain/attestation_challenge/: challenge.h  challenge_store.h
include/domain/evidence/: evidence.h  evidence_canonical.h
include/domain/measurement/: measurement.h  supported_claims.h
include/domain/network_access/: ipv4_cidr.h
include/domain/ring_buffer/: ring_buffer.h
include/domain/verifier_access/: verifier_identity.h  verifier_policy.h
include/infrastructure/: audit_log.h  config_loader.h  config_loader_internal.h  http_server.h  socket_peer.h  stdio_io.h  subnet_policy.h  tls_server.h
include/infrastructure/crypto/: device_key_loader.h  evidence_signer.h  nonce_random.h
include/infrastructure/linux_measurement/: agent_integrity.h  boot_state.h  config_hash.h  firmware_hash.h
include/infrastructure/memory/: challenge_store_memory.h  zero_struct.h
include/infrastructure/tls/: client_cert.h
include/internal/: macros.h
scripts/: mtls_capabilities_smoke.sh  mtls_identity_smoke.sh  mtls_transport_smoke.sh  mtls_verifier_metadata_smoke.sh  subnet_allowed_health_check.sh  subnet_denied_health_check.sh
scripts/dev-pki/: generate-dev-certs.sh
src/: main.c
src/application/: app.c
src/application/attestation_challenge/: create_challenge.c
src/application/evidence/: create_evidence.c  evidence_internal.h  get_evidence_by_id.c  get_latest_evidence.c  latest_evidence_store.c
src/application/security/: get_verifier_metadata.c  verifier_lookup.c
src/domain/: version.c
src/domain/attestation_challenge/: challenge.c
src/domain/evidence/: evidence.c  evidence_canonical.c
src/domain/measurement/: measurement.c  supported_claims.c
src/domain/network_access/: ipv4_cidr.c
src/domain/ring_buffer/: ring_buffer.c
src/domain/verifier_access/: verifier_policy.c
src/infrastructure/: stdio_io.c
src/infrastructure/audit_log/: audit_log.c
src/infrastructure/config_loader/: config_loader.c
src/infrastructure/crypto/: device_key_loader.c  evidence_signer.c  nonce_random.c
src/infrastructure/http_server/: http_server.c  http_server_internal.h  json_utils.c  json_utils.h  routes_attestation.c  routes_verifiers.c
src/infrastructure/linux_measurement/: agent_integrity.c  boot_state.c  config_hash.c  file_sha256_measurement.c  file_sha256_measurement.h  firmware_hash.c
src/infrastructure/memory/: challenge_store_memory.c
src/infrastructure/ring_buffer_file/: evidence_ring_buffer.c  evidence_ring_buffer.h  evidence_ring_checksum.c  evidence_ring_checksum.h  evidence_ring_format.c  evidence_ring_format.h
src/infrastructure/socket_peer/: peer_address.c
src/infrastructure/subnet_policy/: subnet_policy.c
src/infrastructure/tls/: client_cert.c  tls_server.c
tests/integration/: test_capabilities_mtls.c  test_claim_selector_validation.c  test_cli_smoke.c  test_config_hash_change.c  test_evidence_agent_integrity_claim.c  test_evidence_agent_integrity_claim.sh  test_evidence_boot_state_claim.c  test_evidence_boot_state_claim.sh  test_evidence_challenge_validation.sh  test_evidence_config_hash_claim.c  test_evidence_config_hash_claim.sh  test_evidence_firmware_hash_claim.c  test_evidence_firmware_hash_claim.sh  test_evidence_replay.sh  test_evidence_stored_after_creation.c  test_evidence_verifier_binding.sh  test_firmware_hash_change.c  test_get_evidence_by_id_api.c  test_get_latest_evidence_api.c  test_malformed_evidence_request.c  test_replayed_challenge.c  test_ring_buffer_overwrite.c  test_selected_claims_only.c  test_server_harness.c  test_server_harness.h  test_valid_evidence_request.c  test_verifier_cli_verify_evidence.sh
tests/integration/mtls/: Dockerfile.runner  Dockerfile.vantaqd  docker-compose.yml  run.sh  setup_pki.sh  test_challenge_audit.sh  test_challenge_expiry.sh  test_challenge_unauthorized.sh  test_challenge_uniqueness.sh  test_challenge_verifier_binding.sh  test_metadata_authz.sh  test_missing_cert.sh  test_post_challenge.sh  test_unknown_verifier.sh  test_untrusted_cert.sh  test_valid_cert.sh  vantaqd.yaml
tests/integration/mtls/certs/: admin-verifier.crt  admin-verifier.key  device-ca.crt  device-ca.key  device-server.crt  device-server.key  govt-verifier-01.crt  govt-verifier-01.key  unknown-verifier-99.crt  unknown-verifier-99.key  untrusted-ca.crt  untrusted-ca.key  untrusted-verifier.crt  untrusted-verifier.key  verifier-ca.crt  verifier-ca.key
tests/unit/: test_agent_integrity_measurement.c  test_app_startup_config.c  test_app_version.c  test_audit_log.c  test_boot_state_measurement.c  test_challenge_domain.c  test_challenge_store_memory.c  test_challenge_ttl_config.c  test_client_cert_identity.c  test_config_hash_measurement.c  test_config_loader.c  test_create_evidence.c  test_device_key_loader.c  test_evidence_canonical.c  test_evidence_domain.c  test_evidence_ring_format.c  test_evidence_signer.c  test_firmware_hash_measurement.c  test_ipv4_cidr.c  test_json_utils.c  test_latest_evidence_store.c  test_measurement_domain.c  test_nonce_random.c  test_ring_buffer_append.c  test_ring_buffer_checksum.c  test_ring_buffer_hardening.c  test_ring_buffer_open_init.c  test_ring_buffer_read_by_id.c  test_ring_buffer_read_latest.c  test_security_config.c  test_socket_peer.c  test_subnet_policy.c  test_verifier_lookup.c  test_verifier_policy.c
tools/verifier-cli/: README.md  verify_evidence.c
